Demoapp: Kinda-halfway solve API key/secret labels overlapping
Apparently it is partly the version interfering

--- a/examples/style.css
+++ b/examples/style.css
@@ -12,6 +12,11 @@
 
 #topSection {
     width: 800px;
+    height: 52px;
+}
+
+#apiSection {
+    height: 50px;
 }
 
 #graphsSection {
